<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuadProx Mobile</string>
    <string name="app_site">www.quadrata.it</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="server_hint">https://server:8006/</string>
    <string name="username_label">Username</string>
    <string name="realm_label">Realm</string>
    <string name="password_label">Password</string>
    <string name="server_label">Server</string>
    <string name="loginButton_label">Login</string>
    <string name="stopVmButton_label">Stop</string>
    <string name="startVmButton_label">Start</string>
    <string name="updateVmButton_label">VM Details</string>
    <string name="authPref_label">Login data</string>
    <string name="updatePref_label">Refresh</string>
    <string name="app_description">Android Proxmox Client v2.0</string>
    <string name="hostNodes_label">Nodes: </string>
    <string name="nodeVZ_label">VZ: </string>
    <string name="nodeQM_label">Qemu:</string>
    <string name="cpu_label">Cpu: </string>
    <string name="mem_label">Memory: </string>
    <string name="uptime_label">Uptime: </string>
    <string name="startPref_label">Start</string>
    <string name="stopPref_label">Stop</string>
    <string name="shutdownPref_label">Shutdown</string>
    <string name="status_label">Status: </string>
    <string name="id_label">ID: </string>
    <string name="errors_label">Errors: </string>
    <string name="vm_label">VM: </string>
    <string name="user_label">User: </string>
    <string name="type_label">Type: </string>
    <string name="logPref_label">View Logs</string>
    <string name="realm_log_label">Realm: </string>
    <string name="node_label">Node: </string>
    <string name="start_time_label">Started: </string>
    <string name="serverButton_label">Check</string>
    <string name="realm_hint">realm (eg. pve, pam, ...)</string>
    <string name="migratePref_label">Migrate</string>
    <string name="consolePref_label">Console</string>
    <string name="onlineMigrateCheck_label">Online</string>
    <string name="font_size_label">Font size</string>
    <string name="interval_label">Update interval</string>
    <string name="font_size_hint">Number: Font size in scalable pixels</string>
    <string name="update_interval_hint">Number: Update interval in minutes</string>
    <string name="save_prefs">Save</string>
    <string name="interval_hint">How often to update in minuts</string>
    <string name="cancel_prefs">Cancel</string>
    <string name="cluster_label">Cluster</string>
    <string name="cluster_hint">Cluster to monitor</string>
    <string name="notify_enable">Enable Notifications</string>
    <string name="notify_change_label">Notify status</string>
    <string name="notify_cpu_label">Notify CPU Limit</string>
    <string name="notify_mem">Notify memory limit</string>
    <string name="cpu_limit_label">CPU limit</string>
    <string name="mem_limit_label">Memory limit</string>
    <string name="cpu_limit_hint">Percent</string>
    <string name="mem_limit_hint">Percent</string>
    
</resources>