<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/updateVmPref"
        android:showAsAction="ifRoom"
        android:title="@string/updatePref_label"/>
    <item
        android:id="@+id/startVmPref"
        android:title="@string/startPref_label"/>
    <item
        android:id="@+id/shutdownVmPref"
        android:title="@string/shutdownPref_label"/>
    <item
        android:id="@+id/stopVmPref"
        android:title="@string/stopPref_label"/>
    <item
        android:id="@+id/migrateVmPref"
        android:title="@string/migratePref_label"/>
    <item
        android:id="@+id/consoleVmPref"
        android:title="@string/consolePref_label">
    </item>
    <item
        android:id="@+id/logPref"
        android:title="@string/logPref_label"/>

</menu>