<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <EditText
            android:id="@+id/fontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/font_size_hint"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/fomtSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fontSize"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/fontSize"
            android:text="@string/font_size_label" />

        <EditText
            android:id="@+id/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/fontSize"
            android:layout_below="@id/fontSize"
            android:ems="10"
            android:hint="@string/interval_hint"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/intervalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/interval"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fomtSizeLabel"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/interval"
            android:text="@string/interval_label" />

	</RelativeLayout>
    
</ScrollView>